# 聚合所有子应用（自动包含每个子目录）
# Chapter-2
add_subdirectory(Chapter2/Program1)
add_subdirectory(Chapter2/Program2)
#add_subdirectory(Program3) #用作调试
add_subdirectory(Chapter2/Program4)
add_subdirectory(Chapter2/Program5)
add_subdirectory(Chapter2/Program6)
add_subdirectory(Chapter2/Program6p)
#add_subdirectory(App2)
# 按需添加更多应用...
